# chronicle

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HISTORY.md  LICENSE  README.md  build.rs  cliff.toml  lefthook.yml
.claude/hooks/post-tool-use/: annotate-reminder.sh
.claude/hooks/pre-tool-use/: read-context-hint.sh
.claude/skills/annotate/: SKILL.md
.claude/skills/backfill/: SKILL.md
.claude/skills/context/: SKILL.md
.github/workflows/: ci.yml  release.yml  squash-annotate.yml
docs/: LEARNINGS.md  competition.md  read.md  setup.md  vision.md  write.md
docs/original_vision/: competition.md
embedded/: claude-md-snippet.md
embedded/hooks/: chronicle-annotate-reminder.sh  chronicle-read-context-hint.sh
embedded/skills/annotate/: SKILL.md
embedded/skills/backfill/: SKILL.md
embedded/skills/context/: SKILL.md
eval/: __main__.py  analysis.py  config.toml  driver.py  extract.py  judge.py  models.py  pyproject.toml  scoring.py  test_setup.sh
eval/prompts/: v1-baseline.md  v3-deep-elicitation.md
eval/tasks/cache-invalidation/: setup.sh  task.toml
eval/tasks/circular-config/: setup.sh  task.toml
eval/tasks/retry-backoff/: setup.sh  task.toml
features/: 00-overview.md  01-cli-and-config.md  02-git-operations.md  03-ast-parsing.md  04-llm-providers.md  05-writing-agent.md  06-hooks-and-context.md  07-read-pipeline.md  08-advanced-queries.md  09-history-rewrites.md  10-team-operations.md  11-corrections.md  12-mcp-server.md  13-claude-code-integration.md  14-interactive-show.md  15-claude-code-skills.md  16-multi-language-ast.md  17-onboarding.md  18-release-pipeline.md  19-web-viewer.md  20-schema-v2.md  21-ux-study.md  22-schema-v3.md  23-agent-knowledge-capture.md  24-remove-batch-and-backfill.md  25-squash-merge-annotation-preservation.md  26-wisdom-extraction-eval.md
reports/001-first-eval/: learnings.md  questions.json  report.html
reports/001-first-eval/raw/: control_q1.md  control_q2.md  control_q3.md  control_q4.md  control_q5.md  experiment_q1.md  experiment_q2.md  experiment_q3.md  experiment_q4.md  experiment_q5.md  score_control_q1.json  score_control_q2.json  score_control_q3.json  score_control_q4.json  score_control_q5.json  score_experiment_q1.json  score_experiment_q2.json  score_experiment_q3.json  score_experiment_q4.json  score_experiment_q5.json
src/: doctor.rs  error.rs  export.rs  import.rs  lib.rs  main.rs
src/agent/: mod.rs  prompt.rs  tools.rs
src/annotate/: filter.rs  gather.rs  live.rs  mod.rs  squash.rs  staging.rs
src/ast/: anchor.rs  mod.rs  outline.rs  outline_c.rs  outline_cpp.rs  outline_go.rs  outline_java.rs  outline_objc.rs  outline_python.rs  outline_ruby.rs  outline_swift.rs  outline_typescript.rs
src/cli/: annotate.rs  backfill.rs  commit.rs  context.rs  contracts.rs  correct.rs  decisions.rs  deps.rs  doctor.rs  export.rs  flag.rs  history.rs  import.rs  init.rs  knowledge.rs  lookup.rs  mod.rs  note.rs  read.rs  reconfigure.rs  schema.rs  setup.rs  show.rs  status.rs  summary.rs  sync.rs  util.rs  web.rs
src/config/: mod.rs  user_config.rs
src/git/: cli_ops.rs  diff.rs  mod.rs
src/hooks/: mod.rs  post_rewrite.rs  prepare_commit_msg.rs
src/knowledge/: mod.rs
src/mcp/: annotate_handler.rs  mod.rs
src/provider/: anthropic.rs  claude_code.rs  mod.rs
src/read/: contracts.rs  decisions.rs  deps.rs  history.rs  lookup.rs  matching.rs  mod.rs  retrieve.rs  sentiments.rs  staleness.rs  summary.rs
src/schema/: annotation.rs  common.rs  correction.rs  knowledge.rs  migrate.rs  mod.rs  v1.rs  v2.rs  v3.rs
src/setup/: embedded.rs  mod.rs
src/show/: data.rs  keymap.rs  mod.rs  plain.rs  tui.rs
src/show/views/: mod.rs
src/sync/: mod.rs  push_fetch.rs
src/web/: api.rs  assets.rs  mod.rs
tests/: annotate_live.rs  ast_test.rs  git_ops_test.rs  team_ops_test.rs  write_path_test.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/server/: chronicle.ts  git.ts  index.ts
web/src/: App.tsx  api.ts  types.ts
web/src/components/: AnnotationPane.tsx  AnnotationSidebar.tsx  DecisionsPage.tsx  FileTree.tsx  FileViewer.tsx  KnowledgePage.tsx  OverviewPage.tsx  RegionCard.tsx  SentimentsPage.tsx  Shell.tsx  SourcePane.tsx
