[package]
name = "git-chronicle"
version = "0.1.2"
edition = "2021"
description = "AI-powered commit annotation tool that captures reasoning and intent behind code changes"
license = "MIT"
repository = "https://github.com/gotwalt/git-chronicle"
homepage = "https://github.com/gotwalt/git-chronicle"
readme = "README.md"
keywords = ["git", "annotation", "ai", "commit", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.82"
exclude = [".github/", ".claude/", "features/", "HISTORY.md", "CLAUDE.md"]

[lib]
name = "chronicle"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-objc = { version = "3", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
chrono = { version = "0.4", features = ["serde"] }
snafu = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
ratatui = { version = "0.29", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", optional = true }

[features]
default = ["tui", "lang-rust", "lang-typescript", "lang-python", "lang-go", "lang-java", "lang-c", "lang-cpp", "lang-ruby", "lang-objc", "lang-swift"]
tui = ["ratatui", "crossterm"]
lang-rust = ["dep:tree-sitter-rust"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-python = ["dep:tree-sitter-python"]
lang-go = ["dep:tree-sitter-go"]
lang-java = ["dep:tree-sitter-java"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-objc = ["dep:tree-sitter-objc"]
lang-swift = ["dep:tree-sitter-swift"]

[dev-dependencies]
tempfile = "3"
