[package]
name = "git-chronicle"
version = "0.1.5"
edition = "2021"
description = "AI-powered commit annotation tool that captures reasoning and intent behind code changes"
license = "MIT"
repository = "https://github.com/gotwalt/git-chronicle"
homepage = "https://github.com/gotwalt/git-chronicle"
readme = "README.md"
keywords = ["git", "annotation", "ai", "commit", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.82"
exclude = [".github/", ".claude/", "features/", "HISTORY.md", "CLAUDE.md"]

[lib]
name = "chronicle"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
snafu = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
ratatui = { version = "0.29", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", optional = true }
schemars = { version = "1.2.1", features = ["derive"] }
tiny_http = { version = "0.12", optional = true }
rust-embed = { version = "8", optional = true }
open = { version = "5", optional = true }

[features]
default = ["tui", "web"]
tui = ["ratatui", "crossterm"]
web = ["dep:tiny_http", "dep:rust-embed", "dep:open"]

[dev-dependencies]
tempfile = "3"
